# mixed-signals

./: CHANGELOG.md  CHEATSHEET.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HOWTO-VISUALIZER.md  LICENSE  MADE_IN_MADEIRA.md  QUICKSTART.md  README.md  SECURITY.md  kitt.json
benches/: signal_bench.rs
docs/: EASING_CATALOG.md  PHYSICS_SOLVERS.md
examples/: decryption.rs  kitt.json  kitt.rs  skyline.rs  smart_light.rs  snow_demo.rs  test_rust_synth.rs  visualizer.rs
src/: lib.rs  rng.rs
src/composition/: cls_add.rs  cls_frequency_mod.rs  cls_mix.rs  cls_multiply.rs  cls_vca_centered.rs  mod.rs
src/core/: mod.rs  noise_helpers.rs
src/easing/: fnc_ease.rs  mod.rs
src/envelopes/: cls_adsr.rs  cls_impact.rs  cls_linear.rs  mod.rs
src/generators/: cls_constant.rs  cls_keyframes.rs  cls_phase_accumulator.rs  cls_phase_sine.rs  cls_pulse.rs  cls_ramp.rs  cls_sawtooth.rs  cls_sine.rs  cls_square.rs  cls_step.rs  cls_triangle.rs  mod.rs
src/math/: fnc_cpu_features.rs  fnc_cubic_bezier.rs  fnc_derive_seed.rs  fnc_fast_random.rs  fnc_fast_random_batch.rs  fnc_harmonic.rs  fnc_quadratic_bezier.rs  fnc_sanitize.rs  mod.rs
src/noise/: cls_perlin.rs  cls_white_noise.rs  mod.rs
src/physics/: cls_attractor.rs  cls_bounce.rs  cls_decay.rs  cls_orbit.rs  cls_pendulum.rs  cls_projectile.rs  cls_spring.rs  mod.rs
src/processing/: cls_abs.rs  cls_biquad.rs  cls_clamp.rs  cls_clipper.rs  cls_invert.rs  cls_lowpass.rs  cls_normalized.rs  cls_quantize.rs  cls_remap.rs  cls_svf.rs  fnc_bipolar_helpers.rs  mod.rs
src/random/: cls_correlated_noise.rs  cls_fast_correlated_noise.rs  mod.rs  (+11 more)
tests/: invalid_input_guards.rs  invariants.rs  kitt_json_loading.rs  kitt_wav_comparison.rs  shuffle.rs  signal_or_float.rs  signal_spec.rs  signal_view.rs
(+23 files in other folders)
