# <FILE>Cargo.toml</FILE> - <DESC>Mixed-signals library manifest</DESC>
# <VERS>VERSION: 1.8.0</VERS>
# <WCTX>Pre-launch fixes</WCTX>
# <CLOG>Bumped to 0.2.0, fixed rust-version, removed broken bin target, fixed repo URL</CLOG>

[package]
name = "mixed-signals"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
authors = ["JAC"]
description = "Generic signal generator library for animations, audio, games, and simulations"
license = "MIT"
repository = "https://github.com/5ocworkshop/mixed-signals"
keywords = ["signal", "animation", "audio", "easing", "procedural"]
categories = ["graphics", "game-development", "multimedia::audio", "mathematics"]
[dependencies]
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
# Optional dependencies for specific features
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.28", optional = true }
[dev-dependencies]
serde_json = "1.0"
criterion = "0.5"
hound = "3.5" # Pure Rust WAV writer (no system deps)
proptest = "1.4" # Property-based testing for math invariants

[dependencies.hound]
version = "3.5"
optional = true

[dependencies.rodio]
version = "0.19"
optional = true

[features]
default = ["std"]
std = []
visualization = ["ratatui", "crossterm"]  # Enable SignalView widget
audio = ["hound"]  # Enable WAV file generation
realtime-audio = ["rodio"]  # Enable real-time audio (requires ALSA on Linux)
[[example]]
name = "visualizer"
required-features = ["visualization"]
[[bench]]
name = "signal_bench"
harness = false

# <FILE>Cargo.toml</FILE> - <DESC>Mixed-signals library manifest</DESC>
# <VERS>END OF VERSION: 1.8.0</VERS>
